# Projetoferias

./: README.md  pyproject.toml
ferias/: asgi.py  settings.py  urls.py  wsgi.py
